static/css/style.css
/* ... */
.img-feature {
  width: 48px;
  text-align: left;
  margin-top: 20px;
}

.feature-description {
  font-size: 0.875rem;
}

.features-section .left-upper-pane,
.features-section .right-upper-pane {
  background-color: #f7f9fb;
}

.technology-section {
  background-color: #ffffff;
}

.technology-section > div > .row {
  position: relative;
}

.technology-section .background-panes {
  background-color: #ffffff;
  border-bottom: 2px solid #f7f9fb;
  bottom: 0;
}

.technology-section .left-lower-pane,
.technology-section .right-lower-pane {
  background-color: #f7f9fb;
}

.img-technology {
  max-width: 100px;
  margin: 40px auto;
}

.img-technology img {
  width: 80%;
}

.ethereum-logo,
.react-logo {
  width: 100% !important;
}

.roadmap-section {
  background-color: #f7f9fb;
}

.roadmap-section > div > .row {
  position: relative;
}

.roadmap-section .foreground-content {
  padding-bottom: 60px;
}

.roadmap-section .roadmap {
  font-size: 14px;
}

.roadmap-section .background-panes {
  bottom: 0;
}

.roadmap > div {
  margin-left: 20px;
  text-align: center;
}

.roadmap .green-to-blue, .roadmap .blue-to-purple, .roadmap .purple-to-green, .roadmap .blue-to-grey, .roadmap .grey-to-green {
  border-style: solid;
  border-width: 0px 0px 0px 1px;
  border-image-slice: 1;
  padding:10px 10px 40px 10px;
}

.roadmap .green-circle, .roadmap .purple-circle, .roadmap .blue-circle {
  width: 29px;
  height: 29px;
  border-radius: 14.5px;
  position: relative;
  top:-25px;
  left:-25px;
  background-color: #f7f9fb;
}

.roadmap .green-circle {
  border: solid 1px #26d198;
}
.roadmap .blue-circle {
  border: solid 1px #1a82ff;
}
.roadmap .purple-circle {
  border: solid 1px #6e3bea;
}

/* vertical */
.roadmap .grey-to-green {
  border-image-source: linear-gradient(to top, #26d198, #f7f9fb);
}

.roadmap .green-to-blue {
  border-image-source: linear-gradient(to top, #1a82ff, #26d198);
}

.roadmap .blue-to-purple {
  border-image-source: linear-gradient(to top, #6e3bea, #1a82ff);
}

.roadmap .purple-to-green {
  border-image-source: linear-gradient(to top, #26d198, #6e3bea);
}

.roadmap .blue-to-grey {
  border-image-source: linear-gradient(to top, #f7f9fb, #1a82ff);
}

.roadmap-section .roadmap .when {
  color:#455d75;
  margin-bottom: 10px;
}

.roadmap-section .right-lower-pane {
  background-color: #ffffff;
}

.email-signup-input {
  display: inline-block;
  border-radius: 30px;
  background-color: #ebf0f3;
  font-style: italic;
  width: 324px;
  height: 45px;
}

.email-section {
  background-color: #ffffff;
}

.email-section form {
  width: 324px;
  display: inline-block;
  position: relative;
  top: 2px;
}

.email-section .foreground-content {
  padding-top: 60px;
  padding-bottom: 60px;
}

.email-section .form-group {
  width: 324px;
  display: inline-block;
  margin: 20px auto 0px auto;
}

.email-section .btn-container {
  display: inline-block;
  margin: 20px auto 0px auto;
}

.press-section {
  background-color: #f7f9fb;
  padding-top: 40px;
  padding-bottom: 100px;
}

.press-section h2 {
  margin: 60px 0px 40px 0px;
}

.press-mention {
  margin: 20px;
}

.press-logo-wrapper {
  text-align: center;
  width: 200px;
  margin: 20px auto 30px auto;
}

.press-logo-wrapper img {
  width: 100%;
}

.press-quote {
  margin: 20px auto 0px auto;
  text-align: center;
  font-weight: 400;
  font-style: italic;
}

/* presale page */

.presale-form .form-group {
  margin-bottom: 40px;
}

/* Team page */

.team-member {
  margin: 20px;
}

.headshot-wrapper {
  text-align: center;
  width: 200px;
  height: 200px;
  margin: 20px auto;
}

.headshot-wrapper img {
  box-shadow: 1px 1px 20px 0 rgba(0, 0, 0, 0.15);
  border-radius: 100px;
  height: 100%;
  width: 100%;
}

.name {
  margin: 20px auto 0px auto;
  text-align: center;
  font-size: 1.125rem;
  font-weight: 400;
}

.title {
  margin: 0px auto 10px auto;
  text-align: center;
  font-weight: 500;
}

.bio {
  margin: 10px auto;
  text-align: center;
  font-size: 0.75rem;
}

.team-header-section {
  background-color: #f7f9fb;
}

.team-header-section h1 {
  font-weight: 200;
}

.core-team-section h2 {
  margin: 80px auto 40px auto;
}

.core-team-section .left-upper-pane,
.core-team-section .right-upper-pane {
  position: relative;
  background-color: #f7f9fb;
}

.contributing-team-section > div > .row {
  position: relative;
}

.contributing-team-section .foreground-content {
  margin-bottom: 140px;
}

.contributing-team-section h2 {
  margin: 80px auto 40px auto;
}

.contributing-team-section .background-panes {
  bottom: 0;
}

.contributing-team-section .left-lower-pane,
.contributing-team-section .right-lower-pane {
  background-color: #f7f9fb;
}

.filler-section {
  background-color: #f7f9fb;
  height: 100px;
}

.investors-section .left-upper-pane,
.investors-section .right-upper-pane {
  position: relative;
  background-color: #f7f9fb;
}

.investors-section .foreground-content {
  margin-bottom: 120px;
}

.investors-section h2 {
  margin: 140px auto 40px auto;
}

.investor {
  margin: 30px;
}

.logo-wrapper {
  text-align: center;
  width: 200px;
  margin: 20px auto;
}

.logo-wrapper img {
  height: 100%;
}

@media (max-width: 575px) {
  .navbar,
  footer .container,
  .foreground-content {
    padding-left: 30px;
    padding-right: 30px;
  }
  .btn-container {
    margin-bottom: 60px;
  }
  .hero-devices {
    top: 30px;
  }
  .platform-section h2 {
    margin-top: 240px;
  }
  .platform-graphic {
    display: none;
  }
  .partners-section h2 {
    margin-top: 40px;
  }
  .use-cases-section .video {
    margin-top: 60px;
  }
  .middlemen-section h2 {
    margin-top: 40px;
  }
  .middlemen-graphic {
    display: none;
  }
  .features-graphic {
    display: none;
  }
  .features-section h2 {
    margin-top: 160px;
  }
  .technology-section h2 {
    margin-top: 40px;
  }
  .tech-stack-graphic {
    display: none;
  }
  .roadmap-section h2 {
    margin-top: 60px;
  }
  .email-section h2 {
    margin-top: 60px;
  }
}
/* ... */

